card mobile fixes and scrollbar beautification for chrome engine

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,6 +3,29 @@
 @tailwind utilities;
 
 @layer components {
+  ::-webkit-scrollbar {
+    width: 4px;
+    height: 4px;
+  }
+
+  ::-webkit-scrollbar-thumb {
+    background-color: #888;
+    border-radius: 4px;
+  }
+
+  ::-webkit-scrollbar-thumb:hover {
+    background-color: #555;
+  }
+
+  ::-webkit-scrollbar-track {
+    background-color: #f1f1f1;
+    border-radius: 4px;
+  }
+
+  ::-webkit-scrollbar-track:hover {
+    background-color: #e1e1e1;
+  }
+
   .glassCard {
     /* From https://css.glass */
     background: rgba(255, 255, 255, 0.173);
